<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.8</version>
	</parent>

	<groupId>no.nav.dokarkiv</groupId>
	<artifactId>dokarkiv</artifactId>
	<version>1-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>dokumentproduksjoninfo</module>
		<module>arkiverdokumentproduksjon</module>
		<module>behandlejournal</module>
		<module>hentjournalsakinfo</module>
		<module>arkivervariant</module>
		<module>admin</module>
		<module>journalpost</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<argLine>-Xmx2048m</argLine>

		<jakarta.jws-api.version>1.1.1</jakarta.jws-api.version>
		<oracle.version>19.17.0.0</oracle.version>
		<cxf.version>3.5.5</cxf.version>
		<simpleflatmapper.version>8.2.3</simpleflatmapper.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<logback-syslog4j.version>1.0.0</logback-syslog4j.version>
		<java-jwt.version>4.2.1</java-jwt.version>
		<jaxb2-basics-runtime.version>0.13.1</jaxb2-basics-runtime.version>

		<!-- Versjon større enn 2.10.0 gir trøbbel med 'You are currently running with version 2.0.0 of google-api-client.
		You need at least version 1.15 of google-api-client to run version 1.25.0 of the
		Cloud Key Management Service (KMS) API library -->
		<google-cloud-storage.version>2.10.0</google-cloud-storage.version>
		<tink.version>1.7.0</tink.version>

		<commons-io.version>2.11.0</commons-io.version>
		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
		<microsoft-graph.version>5.45.0</microsoft-graph.version>

		<!-- NAV -->
		<modig-security.version>3.0.6</modig-security.version>
		<abac-spring.version>1.6.0</abac-spring.version>
		<token-support.version>2.1.4</token-support.version>
		<verapdf.version>1.22.2</verapdf.version>

		<!-- Tjenestegrensesnitt -->
		<nav-tjenestespesifikasjon.version>2610.9b6de22</nav-tjenestespesifikasjon.version>
		<arkiverdokumentproduksjon-tjenestespesifikasjon.version>2-b9013e7
		</arkiverdokumentproduksjon-tjenestespesifikasjon.version>
		<dokumentproduksjoninfo-tjenestespesifikasjon.version>2.1.1
		</dokumentproduksjoninfo-tjenestespesifikasjon.version>

		<!-- test -->
		<datasource-proxy-spring-boot-starter.version>1.8.1</datasource-proxy-spring-boot-starter.version>
		<!-- TODO: Må oppdateres, men gir feil i testene -->
		<spring-cloud-contract-wiremock.version>2.1.5.RELEASE</spring-cloud-contract-wiremock.version>
		<!-- h2 2.x+ er ikke kompatibel med noen av custom spørringene -->
		<h2.version>1.4.200</h2.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>dokumentproduksjoninfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>behandlejournal</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>hentjournalsakinfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkivervariant</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>admin</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>journalpost</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Tjenestegrensesnitt -->
			<dependency>
				<groupId>no.nav.tjenestespesifikasjoner</groupId>
				<artifactId>nav-fim-behandleJournal-v3-tjenestespesifikasjon</artifactId>
				<version>${nav-tjenestespesifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester.brevogarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon-tjenestespesifikasjon</artifactId>
				<version>${arkiverdokumentproduksjon-tjenestespesifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester.brevogarkiv</groupId>
				<artifactId>dokumentproduksjoninfo-tjenestespesifikasjon</artifactId>
				<version>${dokumentproduksjoninfo-tjenestespesifikasjon.version}</version>
				<classifier>jaxws</classifier>
			</dependency>

			<dependency>
				<groupId>no.nav.modig</groupId>
				<artifactId>modig-security-authorization</artifactId>
				<version>${modig-security.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.freg</groupId>
				<artifactId>abac-spring</artifactId>
				<version>${abac-spring.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>

			<dependency>
				<groupId>org.verapdf</groupId>
				<artifactId>validation-model</artifactId>
				<version>${verapdf.version}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.activation</groupId>
						<artifactId>javax.activation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.simpleflatmapper</groupId>
				<artifactId>sfm-springjdbc</artifactId>
				<version>${simpleflatmapper.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.jws</groupId>
				<artifactId>jakarta.jws-api</artifactId>
				<version>${jakarta.jws-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.papertrailapp</groupId>
				<artifactId>logback-syslog4j</artifactId>
				<version>${logback-syslog4j.version}</version>
				<exclusions>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.jvnet.jaxb2_commons</groupId>
				<artifactId>jaxb2-basics-runtime</artifactId>
				<version>${jaxb2-basics-runtime.version}</version>
			</dependency>
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>${java-jwt.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>google-cloud-storage</artifactId>
				<version>${google-cloud-storage.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink</artifactId>
				<version>${tink.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink-gcpkms</artifactId>
				<version>${tink.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>com.microsoft.graph</groupId>
				<artifactId>microsoft-graph</artifactId>
				<version>${microsoft-graph.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.gavlyukovskiy</groupId>
				<artifactId>datasource-proxy-spring-boot-starter</artifactId>
				<version>${datasource-proxy-spring-boot-starter.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources/data</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>